# atomic_chat

./: .cbmignore  .gitignore  CLAUDE.md  PROMPT.md  README.md  TIMELINE.md  agent  agent.py  alembic.ini  checkpoints.db-shm  checkpoints.db-wal  claude_resume.txt  cli.py  client_agent.py  compare_weights.py  config.py  context.py  credentials.py  get-agent.ps1  get-agent.sh  graph.gexf  graph.json  index.py  index_repo.py  inspect_db.py  install_client.ps1  install_client.sh  launch.py  main.css  main.py  prepass.py  probe_output.txt  pyproject.toml  requirements.txt  run_agents.py  start.sh  task_extractor.py  tool_curator.py  tools.py  tools_server.py  (+1 more)
.continue/: environments.json
agents/: __init__.py  agent_main.py  agent_summary.py  agent_taskmgr.py  base.py  codesearch.py  continue.md  dispatcher.py  ecommerce.py  filesystem.py  marketplace.py  web.py
alembic/: env.py
atomic_client/: agent.py  bridge.py
auth/: accounting_models.py  conv_store.py  conversation_tasks.py  conversations.py  conversations_jsonl.py  db.py  middleware.py  models.py  rate_limit.py  routes.py  seed.py  subtasks.py  usage.py
browser-extension/: background.js  content.js  manifest.json  popup.html  popup.js
code_db/: chroma.sqlite3
context/: __init__.py  compaction.py  tokens.py
data/: known_site_structures.json  mcp_servers.json
frontend/: CLAUDE.md  graph.json  index.css  index.html  package-lock.json  package.json  phone_css_example.txt  tsconfig.app.json  vite.config.ts
graph_summaries/: last_raw_response.txt  raw_batch_0.txt  raw_batch_1.txt  raw_batch_10.txt  raw_batch_100.txt  raw_batch_101.txt  raw_batch_102.txt  raw_batch_103.txt  raw_batch_104.txt  raw_batch_105.txt  raw_batch_106.txt  raw_batch_107.txt  raw_batch_108.txt  raw_batch_109.txt  raw_batch_11.txt  raw_batch_110.txt  raw_batch_111.txt  raw_batch_112.txt  raw_batch_113.txt  raw_batch_114.txt  raw_batch_115.txt  raw_batch_116.txt  raw_batch_117.txt  raw_batch_118.txt  raw_batch_119.txt  raw_batch_12.txt  raw_batch_120.txt  raw_batch_121.txt  raw_batch_122.txt  (+157 more)
(+329 files in other folders)
