[project]
name = "agentic-w-langchain-ollama"
version = "0.2.0"
description = "Multi-agent platform with LangChain + Ollama"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.8",
    "ollama>=0.6.1",
    "mcp[cli]>=1.12.0",
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]
