[project]
name = "atomic-chat"
version = "0.2.0"
description = "Atomic Chat — multi-agent platform with LangChain + Ollama"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.8",
    "ollama>=0.6.1",
    "mcp[cli]>=1.12.0",
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "flask-login>=0.6.3",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "bcrypt>=4.0.0",
    "authlib>=1.4.0",
    "selenium>=4.41.0",
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "qwen-agent>=0.0.34",
    "json5>=0.13.0",
    "soundfile>=0.13.1",
    "python-dateutil>=2.9.0.post0",
    "ddgs>=9.13.0",
]
