[project]
name = "atomic-chat"
version = "0.2.0"
description = "Atomic Chat — agentic chat platform on llama.cpp with qwen-agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-sock>=0.2.0",
    "mcp[cli]>=1.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "bcrypt>=4.0.0",
    "authlib>=1.4.0",
    "selenium>=4.41.0",
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "qwen-agent>=0.0.34",
    "json5>=0.13.0",
    "ddgs>=9.13.0",
    "prompt-toolkit>=3.0.52",
    "rich>=13.0.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=13.0",
    "pytest>=9.0.3",
    "chromadb>=0.6.0",
    "sentence-transformers>=3.0.0",
    "soundfile>=0.13.1",
]
